# fncalc

./: .gitignore  Cargo.toml  README.md  meson.build
fncalc/: Cargo.toml
fncalc-cli/: Cargo.toml
fncalc-cli/src/: main.rs
fncalc-gui/: calc_result.cc  calc_result.hh  fncalc.hh  helpwindow.cc  helpwindow.hh  input_field.cc  input_field.hh  main.cc  mainmenu.cc  mainmenu.hh  mainwindow.cc  mainwindow.hh  meson.build  response_view.cc  response_view.hh  style.cc
fncalc/src/: branch.rs  expression.rs  function.rs  grammar.pest  instruction.rs  lib.rs  parser.rs  session.rs  tests.rs  token.rs  while_loop.rs
