[package]
name = "fncalc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
once_cell = "1.18.0"
pest = "2.7.2"
pest_derive = "2.7.2"
rust_decimal = { version = "1.32.0", features = ["maths"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
